# wordle-solver

./: Cargo.toml  README.md  test.rs
data/: answers.txt  test.txt  words.csv
src/: deep.rs  lib.rs  main.rs  wordle.rs
src/app/: letter.rs  mod.rs  solver.rs  ui.rs  word.rs
src/solver/: data.rs  letter.rs  mod.rs  word.rs
src/tui/: actions.rs  events.rs  keyevents.rs  mod.rs  ui.rs  update.rs
