[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
mimalloc = "0.1.39"
ratatui = "0.26.1"
rayon = "1.9.0"
