[package]
name = "wordlebot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = "fat"

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
ndarray = { version = "0.15.6", features = ["std", "rayon"] }
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
rustc-hash = "1.1.0"
approx = "0.5.1"
clap = { version = "4.5.4", features = ["derive"] }
ratatui = "0.26.2"
crossterm = "0.27.0"
